--- a/game2.html
+++ b/game2.html
@@ -2,7 +2,7 @@
   <head>
     <!-- Pull the engine from the Quintus CDN or load it locally -->
     <!-- (use quintus-all.min.js for production) -->
-    <script src='quintus-all.js'></script>
+    <script src="quintus-all.js"></script>
     <script src="game2.js"></script>
   </head>
   <body>
