--- a/platformer/index.html
+++ b/platformer/index.html
@@ -2,6 +2,7 @@
   <head>
     <script src="../quintus-all.js"></script>
     <script src="platformer.js"></script>
+    <script src="components.js"></script>
   </head>
   <body>
   </body>
